--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,7 @@
 {
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#5A140A",
+        "titleBar.activeBackground": "#7E1C0E",
+        "titleBar.activeForeground": "#FFFCFC"
+    }
 }
