--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@carto/react-basemaps": "^2.2.2",
+    "@carto/react-core": "^2.2.2",
+    "@carto/react-ui": "^2.2.2",
     "@deck.gl/carto": "^8.9.21",
     "@deck.gl/core": "^8.9.21",
     "@deck.gl/google-maps": "^8.9.21",
@@ -25,19 +28,23 @@
     "@turf/intersect": "^6.5.0",
     "@turf/invariant": "^6.5.0",
     "@turf/union": "^6.5.0",
+    "@urbica/react-map-gl": "^1.16.2",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "h3-js": "^4.1.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw": "^0.16.0",
+    "maplibre-gl": "^3.2.1",
     "quadbin": "^0.1.9",
     "react": "^18.2.0",
+    "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
+    "react-is": "^18.2.0",
     "react-map-gl": "^7.1.2",
-    "react-mapbox-gl": "^5.1.1",
-    "react-mapbox-gl-draw": "^2.0.4",
-    "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
