--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@carto/react-api": "^2.2.2",
     "@carto/react-basemaps": "^2.2.2",
     "@carto/react-core": "^2.2.2",
     "@carto/react-ui": "^2.2.2",
@@ -16,7 +17,7 @@
     "@mapbox/mapbox-gl-draw": "^1.4.2",
     "@math.gl/core": "^3.6.3",
     "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.1",
+    "@mui/material": "^5.14.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -36,6 +37,7 @@
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw": "^0.16.0",
     "maplibre-gl": "^3.2.1",
+    "maplibre-gl-draw": "^1.6.9",
     "quadbin": "^0.1.9",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
