--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "@carto/react-api": "^2.2.2",
     "@carto/react-basemaps": "^2.2.2",
     "@carto/react-core": "^2.2.2",
+    "@carto/react-redux": "^2.2.2",
     "@carto/react-ui": "^2.2.2",
-    "@deck.gl/carto": "^8.9.21",
-    "@deck.gl/core": "^8.9.21",
+    "@carto/react-workers": "^2.2.2",
+    "@deck.gl/aggregation-layers": "^8.9.22",
+    "@deck.gl/carto": "^8.9.22",
+    "@deck.gl/core": "^8.9.22",
+    "@deck.gl/extensions": "^8.9.22",
+    "@deck.gl/geo-layers": "^8.9.22",
     "@deck.gl/google-maps": "^8.9.21",
+    "@deck.gl/layers": "^8.9.22",
+    "@deck.gl/mesh-layers": "^8.9.22",
     "@deck.gl/react": "^8.9.21",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -18,6 +25,7 @@
     "@math.gl/core": "^3.6.3",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -30,6 +38,7 @@
     "@turf/invariant": "^6.5.0",
     "@turf/union": "^6.5.0",
     "@urbica/react-map-gl": "^1.16.2",
+    "axios": "^1.4.0",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "h3-js": "^4.1.0",
