--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@turf/invariant": "^6.5.0",
     "@turf/union": "^6.5.0",
     "@urbica/react-map-gl": "^1.16.2",
+    "@urbica/react-map-gl-draw": "^0.3.5",
     "axios": "^1.4.0",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
@@ -53,7 +54,8 @@
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "react-map-gl": "^7.1.2",
+    "react-map-gl": "^7.1.3",
+    "react-map-gl-draw": "^1.0.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
